# PICO_DMX_CONTROLLER

./: .gitignore  CMakeLists.txt  README.md  compile.sh
docs/: README_DMX_CONFIG.md  build_setup_guide.md  dmx512_deep_dive.md  full_universe_config.md  full_universe_receiver.md  pio_dmx_input_limitations.md  project_overview.md
examples/: moving_light.h  multi_fixture.h  rgb_led_strip.h
examples/receiver/: README.md  multi_universe_example.cpp
examples/transmitter/: README.md  custom_pattern_example.cpp  parallel_universe_example.cpp  single_universe_example.cpp
include/: dmx_multi_receiver.h  dmx_receiver.h  dmx_transmitter.h
src/applications/: multi_receiver_main.cpp  receiver_main.cpp  transmitter_main.cpp
src/config/: dmx_config.cpp  dmx_config.h
src/core/: dmx_multi_receiver.cpp  dmx_receiver.cpp  dmx_transmitter.cpp
